# django-the-garden-of-yarns

./: .gitignore  Dockerfile.render  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
amigurumis/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
amigurumis/migrations/: 0001_initial.py  0002_alter_amigurumi_options_alter_amigurumi_authorship_and_more.py  0003_aboutinfo.py  0004_amigurumi_url.py
amigurumis/static/CACHE/css/: output.033dc434c2cc.css  output.09a12de7ff33.css  output.0d372541687d.css  output.0f64ad44d692.css  output.112507adb4e8.css  output.15c397700899.css  output.18152ad824d6.css  output.1a726e8ca723.css  output.27883aeaf18f.css  output.3626c3f125b0.css  output.3653af7e1fbd.css  output.435fd6e6fa88.css  output.45da0307b1bd.css  output.49d7c4040f97.css  output.4aca8458c596.css  output.4bf9af8a5777.css  output.4dfd706f86d1.css  output.5581345dee3f.css  output.5dd60522b681.css  output.5f41bf2f23f3.css  output.6a7baac6fbaa.css  (+16 more)
amigurumis/static/amigurumis/: main.js  style.css
amigurumis/templates/: 400.html  403.html  404.html  500.html  base_generic.html  error_message.html  navbar.html
amigurumis/templates/amigurumis/: about.html  amigurumi_detail.html  amigurumi_list.html  index.html  list.html  socials.html
amigurumis/tests/: test.py
static/CACHE/css/: output.2443a5d0edac.css  output.921fe75d36a2.css  output.adf3472d6b05.css  output.c07d45baf8e5.css  output.d66d4a7ff4c0.css  output.e70ef452d1ea.css  output.f54b8429b677.css
tgy_site/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
