[tool.poetry]
name = "django-the-garden-of-yarns"
version = "0.1.0"
description = ""
authors = ["Diana Perugia Baiadori <diana.baiadori@gmail.com>"]
readme = "README.md"
packages = [{include = "django_the_garden_of_yarns"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2021.10.8"
cloudinary = "1.28.0"
dj-database-url = "0.5.0"
django-appconf = "1.0.5"
django-compressor = "3.0"
django-libsass = "0.7"
django-static-precompiler = "2.0"
gunicorn = "20.1.0"
libsass = "0.21.0"
psycopg2 = "2.9.2"
psycopg2-binary = "2.9.2"
python-dotenv = "0.19.2"
rcssmin = "1.1.0"
rjsmin = "1.2.0"
six = "1.16.0"
sqlparse = "0.4.2"
tzdata = "2021.5"
urllib3 = "1.26.7"
whitenoise = "5.3.0"
django = "^4.1.3"
asgiref = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
